moved the numberOfPeople input so not it bellow the selectTip input

--- a/index.html
+++ b/index.html
@@ -37,6 +37,43 @@
                         </div>
                     </div>
 
+                    <div class="percentage">
+                        <div>
+                            <p class="percent">Select Tip %</p>
+                        </div>
+
+                        <div class="radio-container">
+                            <input type="radio" class="radio" id="five-percent" name="tipPercentage" value="5" />
+                            <label for="five-percent">5%</label>
+
+                            <input type="radio" class="radio" id="ten-percent" name="tipPercentage" value="10" />
+                            <label for="ten-percent">10%</label>
+
+                            <input type="radio" class="radio" id="fftn-percent" name="tipPercentage" value="15" />
+                            <label for="fftn-percent">15%</label>
+
+                            <input type="radio" class="radio" id="twenfiv-percent" name="tipPercentage" value="25" />
+                            <label for="twenfiv-percent">25%</label>
+
+                            <input type="radio" class="radio" id="fivety-percent" name="tipPercentage" value="50" />
+                            <label for="fivety-percent">50%</label>
+
+                            <!-- the custom button -->
+                            <div>
+                                <input
+                                    placeholder="Custom"
+                                    type="number"
+                                    id="custom-tip"
+                                    name="tipCustom"
+                                    min="1"
+                                    max="100"
+                                    onfocus="this.value=''"
+                                    required
+                                />
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="ppl-number">
                         <label for="ppl">Number of People</label>
                         <div class="input-ic">
@@ -45,48 +82,11 @@
                                 type="number"
                                 onfocus="this.value=''"
                                 id="ppl"
-                                name="ppl"
+                                name="numberOfPeople"
                                 min="1"
                                 max="999"
                                 required
                             />
-                        </div>
-                    </div>
-
-                    <div class="percentage">
-                        <div>
-                            <p class="percent">Select Tip %</p>
-                        </div>
-
-                        <div class="radio-container">
-                            <input type="radio" id="five-percent" name="bill-prcntg" value="5" />
-                            <label for="five-percent">5%</label>
-
-                            <input type="radio" id="ten-percent" name="bill-prcntg" value="10" />
-                            <label for="ten-percent">10%</label>
-
-                            <input type="radio" id="fftn-percent" name="bill-prcntg" value="15" />
-                            <label for="fftn-percent">15%</label>
-
-                            <input type="radio" id="twenfiv-percent" name="bill-prcntg" value="25" />
-                            <label for="twenfiv-percent">25%</label>
-
-                            <input type="radio" id="fivety-percent" name="bill-prcntg" value="50" />
-                            <label for="fivety-percent">50%</label>
-
-                            <!-- the custom button -->
-                            <div>
-                                <input
-                                    placeholder="Custom"
-                                    type="number"
-                                    id="custom"
-                                    name="bill"
-                                    min="1"
-                                    max="100"
-                                    onfocus="this.value=''"
-                                    required
-                                />
-                            </div>
                         </div>
                     </div>
                 </form>
@@ -117,13 +117,13 @@
                     </div>
 
                     <div class="btn-container">
-                        <button type="submit" id="button-tip">reset</button>
+                        <button type="button" id="button-reset">reset</button>
                     </div>
                 </div>
             </div>
         </section>
 
-        <script src="./calc.js"></script>
+        <script src="./app.js"></script>
         <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Saepul Bahri</a>.
